Reduce Azurite provider duplication